--- a/css/style.css
+++ b/css/style.css
@@ -12743,7 +12743,7 @@ textarea:not(:focus):valid~.floating-label[data-v-6cb69558] {
 
 
 
-#apply-section h1 {
+#apply-section h1{
     font-size: 70px;
     font-weight: 600;
     background-image: conic-gradient(#2b9259 30%, #9ab4b0 40%, #6816aa 70%, #00c2cb 80%, #d60202);
@@ -12753,9 +12753,110 @@ textarea:not(:focus):valid~.floating-label[data-v-6cb69558] {
     text-align: center;
   }
 
+/* #apply-section h3 {
+    background-image: conic-gradient(#2b9259 30%, #9ab4b0 40%, #6816aa 70%, #00c2cb 80%, #d60202);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    text-align: center;
+}
+
 #apply-section {
     display: block;
     margin: auto;
     margin: 20px;
     width: 100%;
+} */
+
+/* Applications Section */
+.applications {
+    padding: 2rem;
+    text-align: center;
+    margin: 2rem auto;
+}
+
+/* .section-title {
+    font-size: 6rem;
+    margin-bottom: 2rem;
+    color: #333;
+} */
+
+
+.application-box {
+    
+    width: 40%;
+    height: 10%;
+    border: 2px solid #333;
+    padding: 2rem;
+    border-radius: 1rem;
+    background-color: #f5f5f5;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+}
+
+/* .application-box span {
+    font-size: 3rem;
+    font-weight: bold;
+    background-image: conic-gradient(#2b9259 30%, #9ab4b0 40%, #6816aa 70%, #00c2cb 80%, #d60202);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    text-align: center;
+    
+} */
+
+.section-subtitle{
+    margin: 20px;
+
+}
+
+/* .application-box span {
+    font-size: 3rem;
+    font-weight: 400;
+    background: linear-gradient(270deg, #ff0000, #ff9900, #ff0000);
+    background-size: 600% 600%;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: gradientFlow 5s ease infinite;
+}
+
+/* Gradient animation */
+/* @keyframes gradientFlow {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+} */
+
+.application-box span {
+    font-size: 5rem;
+    font-weight: 400;
+    background-image: conic-gradient(#2b9259 30%, #9ab4b0 40%, #6816aa 70%, #00c2cb 80%, #d60202);
+    background-size: 200% 200%;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: conicGradientFlow 8s linear infinite;
+}
+
+/* Conic Gradient Animation */
+@keyframes conicGradientFlow {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    100% {
+        background-position: 100% 100%;
+    }
 }
